# HydroSat-Systems

./: .gitattributes  .gitignore  README.md  pyproject.toml
artifacts/final_selection/: segformer_current_champion.json  segformer_fallback_champion.json  segformer_fresh_seed3407_locked_recipe.json
artifacts/tuning/20260328_wave2_tta12_ms075_100_125/: best.json  results.csv
dataset-preliminary round/: readme.docx
dataset-preliminary round/Test/Images/: GF2_PMS1_E118.6_N26.9_20221021_L1A0006841038-pansharpen_10240_11264_19456_20480_crop_0_0.png.baiduyun.uploading.cfg  GF2_PMS1_E118.6_N26.9_20221021_L1A0006841038-pansharpen_10240_11264_19456_20480_crop_0_512.png.baiduyun.uploading.cfg  (+98 more)
hydrosat/: __init__.py
hydrosat/cli/: __init__.py  apply_binary_threshold.py  export_ensemble_water_masks.py  export_water_masks.py  generate_split_files.py  package_submission.py  postprocess_binary_masks.py  predict_probs.py  prepare_preliminary_round_dataset.py  score_predictions.py  train_model.py  tune_segformer_binary.py  tune_segformer_ensemble.py
hydrosat/configs/: __init__.py  gid_water_binary_dataset.py  segformer_water_binary_train.py
hydrosat/core/: __init__.py  common.py  mask_ops.py  metrics.py  utils.py
hydrosat/tools/: __init__.py  bootstrap_openmmlab_env.ps1  check_openmmlab_env.py  patch_mmcv_windows_build.py
requirements/: openmmlab_windows.txt
submission/segformer_ensemble_3407_6143_tta12_ms075_100_125_thr045_hole512/: manifest.json
tests/: test_metrics.py  test_package_submission.py  test_segformer_ensemble_scripts.py
